# cc-import

./: .gitignore  README.md  __init__.py  cli.py  conftest.py  converter.py  plugin.yaml  pyproject.toml  state.py  tools.py
.github/workflows/: ci.yml
docs/plans/: 2026-04-25-001-feat-cc-import-slice-1-plan.md  2026-04-25-002-feat-cc-import-slice-2-plan.md
tests/: conftest.py  test_cli.py  test_converter.py  test_metadata.py  test_register.py  test_state.py  test_tools.py
