[project]
name = "cc-import"
version = "0.1.0"
description = "Import Claude Code plugins (skills + agents) into Hermes Agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tyler Barstow" }]
keywords = ["hermes-agent", "claude-code", "plugin"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-mock>=3.12,<4",
    "ruff>=0.6,<1",
    "ty>=0.0.1a13",
]

[project.urls]
Repository = "https://github.com/roach88/cc-import"
Issues = "https://github.com/roach88/cc-import/issues"

# This plugin is loaded via importlib from $HERMES_HOME/plugins/cc-import/,
# not pip-installed as a `cc_import` package. The dev dependencies above are
# documentation; CI and local development install them directly via
# `uv pip install pyyaml pytest pytest-mock ruff ty`.

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"

# Ignore unresolved-import diagnostics for the plugin's own files: ty cannot
# statically resolve the ``from . import cli`` form because the repo is not
# itself a package (Hermes loads __init__.py with an injected package
# context at runtime). Matches Hermes's own pyproject.toml convention for
# the same reason.
[[tool.ty.overrides]]
include = ["**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
# Slice 2 adds a third-tier fallback (`module = None` when both relative
# and absolute imports fail under pytest's eager Package.setup()). The
# fallback is harmless at runtime — register() / handlers are never
# invoked in that context — but ty flags the union with None as
# unsafe attribute access. Suppressed with the same rationale as
# unresolved-import: the runtime resolution is correct.
unresolved-attribute = "ignore"
conflicting-declarations = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
# import-mode=importlib bypasses pytest's __init__.py-based package detection.
# Required because the plugin's __init__.py at the repo root would otherwise
# make pytest treat the whole tree as a package, causing test collection to
# try importing __init__.py directly (which fails on its `from . import cli`
# relative import without a parent package).
addopts = "-q --import-mode=importlib"
